feat: add new colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,12 @@
 		--radius: 0.5rem;
 
 		--oxfordBlue: #002548;
+		--gray400: #8f939a;
+		--purple: #6567d9;
+		--lavenderBlue: #d2cdff;
+		--primaryLight200: #9f70da;
+		--primaryBlack: #040404;
+		--primaryPurple: #834CC9;
 	}
 }
 
